# coachpy

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
src/coachpy/: __init__.py  constants.py  core.py  simulation.py
