[project]
name = "coachpy"
version = "0.1.1"
description = "Een modern Python-alternatief voor Coach7 voor natuurkundig modelleren in het onderwijs."
readme = "README.md"
authors = [
    { name = "Bram Leisink", email = "bram@leis.ink" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=2.0",
]

keywords = ["natuurkunde", "onderwijs", "modelleren", "simulation", "physics", "education", "coach7"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/BramLeisink/coachpy"
Repository = "https://github.com/BramLeisink/coachpy"
Issues = "https://github.com/BramLeisink/coachpy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]